--- a/main.scss
+++ b/main.scss
@@ -96,10 +96,10 @@ body {
         }
     }
 
-    .grid {
+    .citizens-advantage-grid {
         display: flex;
         justify-content: center;
-        .grid-template-wrapper {
+        .citizens-advantage-grid-template-wrapper {
             display: grid;
             align-items: center;
             grid-template-columns: 1fr;
@@ -112,19 +112,18 @@ body {
                 padding: 10px;
                 max-width: 1280px;
             }
-            .grid-element {
+            .citizens-advantage-grid-element {
                 display: flex;
                 border-bottom: 0.4px solid $light-gray;
-                padding: 17px 0px 10px;
+                padding: 16px 0px 9px;
                 @media (min-width: 769px) {
                     border-bottom: 0.4px solid transparent;
                     padding: 0px;
                 }
-                .grid-text-wrapper {
+                .citizens-advantage-grid-text-wrapper {
                     padding-left: 30px;
                     display: flex;
                     flex-direction: column;
-
                     .home-loan-title {
                         font-size: 20px;
                         color: $green;
@@ -139,6 +138,7 @@ body {
                         color: $light-green;
                         font-size: 16px;
                         text-decoration: none;
+                        padding-bottom: 15px;
                     }
                 }
             }
@@ -182,24 +182,26 @@ body {
         display: flex;
         justify-content: center;
         .quotes-grid-wrapper {
-            max-width: 1280px;
             display: grid;
             grid-template-columns: 1fr;
-            grid-column-gap: 40px;
             justify-items: center;
-            padding: 35px 30px 90px;
+            padding: 40px 30px 75px;
             @media (min-width: 769px) {
                 grid-template-columns: 1fr 2fr 1fr;
+                grid-column-gap: 40px;
+                max-width: 1280px;
+                padding: 35px 30px 90px;
             }
             .quotes-wrapper{
                 display: grid;
-                grid-template-rows: 1fr .5fr .5fr;
+                grid-template-rows: .5fr .4fr .2fr;
                 justify-items: center;
                 align-items: center;
                 width: 70%;
                 .quotes-bio-pic {
                     width: 180px;
                     height: 180px;
+                    grid-template-rows: 1fr .5fr .5fr;
                 }
                 .quotes-image {
                     position: absolute;
@@ -208,15 +210,21 @@ body {
                     display: block;
                     text-align: center;
                     font-style: italic;
-                    font-size: 15px;
+                    font-size: 17px;
                     line-height: 1.8;
                     color: $secondary-gray;
+                    @media (min-width: 769px) {
+                        font-size: 15px; 
+                    }
                 }
                 .quotes-author {
                     color: $green;
-                    line-height: 1.602;
+                    line-height: 1.5;
                     font-size: 15px;
-                    display: block;
+                    @media (min-width: 769px) {
+                        display: block;
+                        line-height: 1.602;
+                    }
                 }
             }
         }
